version 1.4.2
- expect_<condition> now uses conditionMessage internally. This
  should increase compatibility with packages defining custom
  conditions. (thanks to Tim Taylor for suggesting and Etienne Bacher
  for reporting)
- expect_match is now available when testing packages (thanks to 
  Tim Taylor for the PR and Marcel Ramos for reporting)
- fix in pattern matching for warnings (thanks for Matthijs Berends
  for the PR)
- Fixed exit_if_not() that would always exit (thanks to Vincent 
  Arel-Bundock for reporting)

version 1.4.1
- expect_warning and expect_message gain argument 'strict'. This toggles
  between failing when an exception worse than the expected one is thrown.
  (Thanks to Joshua Ulrich for the suggestion)
- New function 'expect_length' checks length of object (thanks to Marcel Ramos 
  for suggesting).
- New function 'exit_if': conditionally exit a test file, akin to stopifnot.
  (Thanks to Grant McDermott for triggering this).
- New function 'expect_match' to test whether string output(s) match a 
  regular expression (Thanks to Aaron Jacobs for the suggestion).
- package has no logo now, thanks to Reto Stauffer!
- 'build_install_test' gains 'color' argument (thanks to Tim Taylor
  for suggesting)
- 'run_test_file' and 'build_install_test' gain 'encoding' argument that
  is passed to 'parse' for reading test files (thanks to Vincent Goulet
  for suggesting).
- exit_file() is now safeguarded against non-character argument.
- Fixed reporting issue for class labels on conditions. (thanks to dherz 
  for reporting)
- Fixed bug: multiple extension packages are now possible (thanks
  to Vincent Arel-Bundock for the PR)


version 1.3.1
- expect_error, _warning, _message, _stdout now accept ... arguments
  that are passed as extra arguments to 'grepl', when a pattern is
  provided (Thanks to Bart-Jan van Rossum for the GH issue).
- Package now also resets locale settings after each file run,