@@ -23,5 +23,5 @@ URL: https://github.com/markvanderloo/tinytest
 BugReports: https://github.com/markvanderloo/tinytest/issues
 Depends: R (>= 3.0.0)
 Imports: parallel, utils
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.2
 Encoding: UTF-8
